--- a/web_1_html_css/1.html
+++ b/web_1_html_css/1.html
@@ -10,9 +10,9 @@
     <h1>마이페이보릿</h1>
     <ol>        
         <li onclick="window.open('2.html', '_blank')"><a>아라시</a></li>
-        <li><a href="3.html">섹시존</a></li>
-        <li><a href="4.html">왕허디</a></li>  
-        <li><a href="5.html">관홍</a></li>         
+        <li onclick="window.open('3.html', '_blank')"><a>섹시존</a></li>       
+        <li onclick="window.open('4.html', '_blank')"><a>왕허디</a></li>        
+        <li onclick="window.open('5.html', '_blank')"><a>관홍</a></li>     
     </ol> 
 </body>   
 </html>
