--- a/web_1_html_css/2.html
+++ b/web_1_html_css/2.html
@@ -6,9 +6,8 @@
 </head>
 
 <body>
-    <h1>마이페이보릿</h1>
     <ul>        
-            <li><a href="1.html">HOME</a></li>      
+            <li onclick="window.open=('1.html')"><a>HOME</a></li>      
     </ul>
         
     <a href="https://www.j-storm.co.jp/arashi" target="_blank" title="아라시 제이스톰 공식사이트"><h2><u>아라시</u></h2></a>    
