--- a/web_1_html_css/2.html
+++ b/web_1_html_css/2.html
@@ -11,15 +11,13 @@
     </ul>
         
     <a href="https://www.j-storm.co.jp/arashi" target="_blank" title="아라시 제이스톰 공식사이트"><h2><u>아라시</u></h2></a>    
-
+    <div>
     <p>
         아라시는 일본의 남성 아이돌 그룹이다. 소속 예능 사무소는 자니스 사무소이며, 소속 레코드 회사는 제이 스톰이다.
         "아라시"라고 하는 그룹명은, 「세계에 아라시(폭풍우)를 일으킨다」 「연예계에 아라시(폭풍우)를 일으킨다」라는 의미 외,
         첫 글자가 오십음에서도 가장 처음인 "아", 알파벳에서도 가장 처음인 "A"로, 「정점에 선다」라는 의미가 담겨 있다.
-    </p>  
-    <p>
-       <img src="arashi.png" width="500px"> 
-    </p>  
+    </p>
+    </div>
 
     <div id="disqus_thread"></div>
     <script>
