--- a/web_1_html_css/2.html
+++ b/web_1_html_css/2.html
@@ -7,7 +7,7 @@
 
 <body>
     <ul>        
-            <li onclick="window.open=('1.html', '_blank')"><a>HOME</a></li>      
+            <li onclick="window.open('1.html')"><a>HOME</a></li>      
     </ul>
         
     <a href="https://www.j-storm.co.jp/arashi" target="_blank" title="아라시 제이스톰 공식사이트"><h2><u>아라시</u></h2></a>    
